# projet-graphe

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  SCORING_AUDIT.md  contexte.md
projet/: CODE_AUDIT.md  SCORING_REFACTOR_PLAN.md  example_advanced_scoring.py  pyproject.toml
projet/output/: relationships_20260303_144857.csv  relationships_20260303_144857.json  relationships_20260303_145512.csv  relationships_20260303_145512.json  relationships_20260303_145555.csv  relationships_20260303_145555.json
projet/output/20260303_144900/: interactive_graph_0xd8da6b.html
projet/output/20260303_145517/: interactive_graph_0xd8da6b.html
projet/output/20260303_145557/: interactive_graph_0xd8da6b.html
projet/src/: config.py  main.py
projet/src/adapters/: dune.py  synthetic_data.py  synthetic_data_README.md
projet/src/domain/: models.py
projet/src/infrastructure/: cache.py  price_service.py
projet/src/presentation/: exporter.py  table_formatter.py
projet/src/services/: correlation.py  interactive_viz.py  price_service.py
projet/src/services/scoring/: README.md  __init__.py  base.py  components.py  config.py  correlation_scorer.py  ensemble_scorer.py  initial_scorer.py  multipath_scorer.py  ppr_scorer.py  reliable_route_scorer.py  simple_node_scorer.py  simrank_scorer.py  temporal_scorer.py
projet/tests/: generate_synthetic_scenarios.py  test_advanced_scoring.py  test_correlation_scorer.py  test_scorer_comprehensive.py  test_scoring_fixes.py  test_scoring_synthetic.py
